<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="Covid-19 Updater"/>
        <item
            android:id="@+id/safetyTips"
            android:icon="@drawable/ic_safety"
            android:title="@string/safety_tips"/>
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_login"
            android:title="@string/login"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/contactUs"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us"/>
    </group>
</menu>