<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegistrationActivity">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_marginTop="130dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <EditText
            android:layout_margin="10dp"
            android:id="@+id/et_last_name"
            android:layout_below="@id/et_first_name"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <EditText
            android:layout_margin="10dp"
            android:id="@+id/et_email"
            android:layout_below="@id/et_last_name"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <EditText
            android:layout_margin="10dp"
            android:id="@+id/et_password"
            android:layout_below="@id/et_email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <Button
            android:layout_margin="10dp"
            android:id="@+id/btn_register"
            android:layout_below="@id/et_password"
            android:background="@color/colorAccent"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>