<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeToRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.StartActivity">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/india_covid_19_ntracker"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lastUpdateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/last_updated"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:layout_margin="16dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmed"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_red"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/imgCorona"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/corona_virus"/>
                <TextView
                    android:id="@+id/confirmedTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_red"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/active_cases"/>
                <TextView
                    android:id="@+id/activeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/recovered_cases"
                    android:background="@color/dark_green"/>
                <TextView
                    android:id="@+id/recoveredTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deceased"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_yellow"
                    android:textStyle="bold"/>
                <ImageView
                    android:background="@color/dark_yellow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/deceased_cases"/>
                <TextView
                    android:id="@+id/deceasedTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_yellow"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
        <ListView
            android:id="@+id/list"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container"/>

    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>